--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,8 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      hibernate.hbm2ddl.auto: update
+#      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
