--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,11 +9,12 @@ spring:
     hibernate:
 #      hibernate.hbm2ddl.auto: update
       ddl-auto: update
+      use_sql_comments: true
     properties:
       hibernate:
         format_sql: true
 
-#logging:
-#  level:
-#    org.hibernate.sql: debug
+logging:
+  level:
+    org.hibernate.sql: debug
 #    org.hibernate.type: trace
