--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   jpa:
     hibernate:
 #      hibernate.hbm2ddl.auto: update
-      ddl-auto: update
+      ddl-auto: create
       use_sql_comments: true
     properties:
       hibernate:
