--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,7 @@ logging:
   level:
     org.hibernate.sql: debug
 #    org.hibernate.type: trace
+server:
+  servlet:
+    session:
+      tracking-modes: cookie
